sava the last result

--- a/otfusion/run.ipynb
+++ b/otfusion/run.ipynb
@@ -48,9 +48,10 @@
    "source": [
     "#实验3: prune many times\n",
     "#剪枝实验3:prune times without finetune\n",
+    "#design\n",
     "activation_seed=21\n",
     "experiment_dir=\"experiment2\"\n",
-    "prunint_rate=0.1\n",
+    "prunint_rate=0.2\n",
     "run_mode='prune_times'\n",
     "load_model_dir='./cifar_models'"
    ]
