--- a/otfusion/run0.5.ipynb
+++ b/otfusion/run0.5.ipynb
@@ -19,6 +19,10 @@
    "execution_count": 6,
    "id": "f6e80ead-659e-47bc-bf87-d87c13b16229",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
